--- a/src/main/resources/assets/better_berries/lang/en_us.json
+++ b/src/main/resources/assets/better_berries/lang/en_us.json
@@ -6,6 +6,20 @@
 
   "item.better_berries.berry_medley": "Berry Medley",
 
+  "item.better_berries.blackberry_juice": "Blackberry Juice",
+  "item.better_berries.blueberry_juice": "Blueberry Juice",
+  "item.better_berries.glow_berry_juice": "Glow Berry Juice",
+  "item.better_berries.maloberry_juice": "Maloberry Juice",
+  "item.better_berries.raspberry_juice": "Raspberry Juice",
+  "item.better_berries.sweet_berry_juice": "Sweet Berry Juice",
+
+  "item.better_berries.blackberry_smoothie": "Blackberry Smoothie",
+  "item.better_berries.blueberry_smoothie": "Blueberry Smoothie",
+  "item.better_berries.glow_berry_smoothie": "Glow Berry Smoothie",
+  "item.better_berries.maloberry_smoothie": "Maloberry Smoothie",
+  "item.better_berries.raspberry_smoothie": "Raspberry Smoothie",
+  "item.better_berries.sweet_berry_smoothie": "Sweet Berry Smoothie",
+
   "tooltip.better_berries.saturating": "Saturating!",
   "tooltip.better_berries.irresistible_combination": "An Irresistible Combination Of Berries!",
 
